--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ exceptiongroup==1.2.1
 fastapi==0.111.0
 fastapi-cli==0.0.4
 greenlet==3.0.3
+gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -18,6 +19,7 @@ markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
 orjson==3.10.3
+packaging==24.0
 pydantic==2.7.2
 pydantic_core==2.18.3
 Pygments==2.18.0
